--- a/src/view/landing.handlebars
+++ b/src/view/landing.handlebars
@@ -1,26 +1,116 @@
-<table class="table-fixed w-full">
-  <thead>
-    <tr>
-      <th>Song</th>
-      <th>Artist</th>
-      <th>Year</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>The Sliding Mr. Bones (Next Stop, Pottersville)</td>
-      <td>Malcolm Lockyer</td>
-      <td>1961</td>
-    </tr>
-    <tr>
-      <td>Witchy Woman</td>
-      <td>The Eagles</td>
-      <td>1972</td>
-    </tr>
-    <tr>
-      <td>Shining Star</td>
-      <td>Earth, Wind, and Fire</td>
-      <td>1975</td>
-    </tr>
-  </tbody>
-</table>
+<div class="flex flex-col">
+  <div class="-m-1.5 overflow-x-auto">
+    <div class="p-1.5 min-w-full inline-block align-middle">
+      <div class="overflow-hidden">
+        <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+          <thead>
+            <tr>
+              <th
+                scope="col"
+                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase"
+              >Name</th>
+              <th
+                scope="col"
+                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase"
+              >Age</th>
+              <th
+                scope="col"
+                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase"
+              >Address</th>
+              <th
+                scope="col"
+                class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase"
+              >Action</th>
+            </tr>
+          </thead>
+          <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
+            <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-gray-200"
+              >John Brown</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
+              >45</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
+              >New York No. 1 Lake Park</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium"
+              >
+                <a class="text-blue-500 hover:text-blue-700" href="#">Delete</a>
+              </td>
+            </tr>
+
+            <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-gray-200"
+              >Jim Green</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
+              >27</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
+              >London No. 1 Lake Park</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium"
+              >
+                <a class="text-blue-500 hover:text-blue-700" href="#">Delete</a>
+              </td>
+            </tr>
+
+            <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-gray-200"
+              >Joe Black</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
+              >31</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
+              >Sidney No. 1 Lake Park</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium"
+              >
+                <a class="text-blue-500 hover:text-blue-700" href="#">Delete</a>
+              </td>
+            </tr>
+
+            <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-gray-200"
+              >Edward King</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
+              >16</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
+              >LA No. 1 Lake Park</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium"
+              >
+                <a class="text-blue-500 hover:text-blue-700" href="#">Delete</a>
+              </td>
+            </tr>
+
+            <tr class="hover:bg-gray-100 dark:hover:bg-gray-700">
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-gray-200"
+              >Jim Red</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
+              >45</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
+              >Melbourne No. 1 Lake Park</td>
+              <td
+                class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium"
+              >
+                <a class="text-blue-500 hover:text-blue-700" href="#">Delete</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
