--- a/src/view/players/add.handlebars
+++ b/src/view/players/add.handlebars
@@ -76,6 +76,7 @@
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
           >Goals</label>
           <input
+            min="0"
             value="0"
             type="number"
             name="goals"
