--- a/src/view/players/list.handlebars
+++ b/src/view/players/list.handlebars
@@ -87,8 +87,8 @@
                   class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium"
                 >
                   <a
-                    class="text-red-500 hover:text-red-700"
-                    href="/players/api/delete/{{this._id}}"
+                    class="text-red-500 hover:text-red-700 cursor-pointer"
+                    onclick="remove('{{this._id}}')"
                   >Delete</a>
                 </td>
               </tr>
@@ -99,3 +99,7 @@
     </div>
   </div>
 </div>
+<script>
+  const remove = (id) => { let e = confirm("Are you sure you want to delete");
+  if(e){ location.href = `/players/api/delete/${id}` } }
+</script>
