--- a/src/view/login/login.handlebars
+++ b/src/view/login/login.handlebars
@@ -27,7 +27,7 @@
             <label
               for="email"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-            >Username {{login}}</label>
+            >Username {{session.user.username}}</label>
             <input
               type="text"
               pattern="[A-Za-z0-9\-]+"
