--- a/src/view/layouts/profile-layout.handlebars
+++ b/src/view/layouts/profile-layout.handlebars
@@ -19,13 +19,13 @@
               >Players</a>
               <a
                 href="/nations"
-                class="text-gray-300 bg-gray-900 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
+                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
               >Nations</a>
             </div>
             <div class="flex items-baseline space-x-4">
               <a
                 href="/profile"
-                class="hover:bg-gray-700 text-white rounded-md px-3 py-2 text-sm font-medium"
+                class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
                 aria-current="page"
               >Profile ({{user.name}})</a>
             </div>
