--- a/src/view/nations/add.handlebars
+++ b/src/view/nations/add.handlebars
@@ -18,21 +18,12 @@
             required=""
           />
         </div>
-
-        <div class="sm:col-span-2">
-          <label
-            for="description"
-            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Description</label>
-          <textarea
-            name="description"
-            id="description"
-            rows="8"
-            class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-            placeholder="Your description here"
-          ></textarea>
-        </div>
       </div>
+      {{#if session.NATION_ADD_EXIST}}
+        <h2
+          class="px-5 py-2.5 mt-4 sm:mt-6 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400"
+        >{{session.NATION_ADD_EXIST}}</h2>
+      {{/if}}
       <button
         type="submit"
         class="inline-flex items-center px-5 py-2.5 mt-4 sm:mt-6 text-sm font-medium text-center text-white bg-blue-600 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-blue-700"
