--- a/src/view/players/add.handlebars
+++ b/src/view/players/add.handlebars
@@ -32,19 +32,20 @@
             required=""
           />
         </div>
-        <div class="w-full">
+        <div>
           <label
-            for="price"
+            for="category"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Club</label>
-          <input
-            type="text"
-            name="club"
-            id="brand"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-            placeholder="Club"
-            required=""
-          />
+          >Nation</label>
+          <select
+            name="nation"
+            id="category"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          >
+            {{#each nation}}
+              <option value="{{this._id}}">{{this.name}}</option>
+            {{/each}}
+          </select>
         </div>
         <div>
           <label
