--- a/src/view/players/list.handlebars
+++ b/src/view/players/list.handlebars
@@ -1,11 +1,23 @@
 <div class="flex flex-col">
   <div class="-m-1.5 overflow-x-auto">
     <div class="p-1.5 min-w-full inline-block align-middle">
-      <div class="flex w-full">
+      <div class="flex w-full justify-between">
+        <div class="flex gap-2">
+          <a
+            href="/players"
+            class="text-white cursor-pointer mb-4 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-md text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+            aria-current="page"
+          >All</a>
+          <a
+            href="/captain"
+            class="text-white cursor-pointer mb-4 bg-blue-500 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-md text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+          >Captains</a>
+        </div>
+
         <a
           href="players/add"
           type="button"
-          class="text-white cursor-pointer ml-auto mb-4 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-md text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+          class="text-white cursor-pointer mb-4 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-md text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
         >New</a>
       </div>
       <div class="overflow-hidden">
@@ -23,7 +35,7 @@
               <th
                 scope="col"
                 class="px-6 py-4 text-left text-xs font-medium text-gray-500 uppercase"
-              >Club</th>
+              >Nation</th>
               <th
                 scope="col"
                 class="px-6 py-4 text-left text-xs font-medium text-gray-500 uppercase"
@@ -36,14 +48,16 @@
                 scope="col"
                 class="px-6 py-4 text-center text-xs font-medium text-gray-500 uppercase"
               >Captain</th>
-              <th
-                scope="col"
-                class="px-6 py-4 text-center text-xs font-medium text-gray-500 uppercase"
-              >Update</th>
-              <th
-                scope="col"
-                class="px-6 py-4 text-right text-xs font-medium text-gray-500 uppercase"
-              >Delete</th>
+              {{#if user.isAdmin}}
+                <th
+                  scope="col"
+                  class="px-6 py-4 text-center text-xs font-medium text-gray-500 uppercase"
+                >Update</th>
+                <th
+                  scope="col"
+                  class="px-6 py-4 text-right text-xs font-medium text-gray-500 uppercase"
+                >Delete</th>
+              {{/if}}
             </tr>
           </thead>
           <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
@@ -61,7 +75,7 @@
                 >{{this.name}}</td>
                 <td
                   class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
-                >{{this.club}}</td>
+                >{{this.nation.name}}</td>
                 <td
                   class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-gray-200"
                 >{{this.position}}</td>
@@ -75,22 +89,24 @@
                   {{else}}
                     <span>No</span>
                   {{/if}}</td>
-                <td
-                  class="px-6 py-4 whitespace-nowrap text-center text-sm font-medium"
-                >
-                  <a
-                    class="text-blue-500 hover:text-blue-700"
-                    href="/players/update/{{this._id}}"
-                  >Update</a>
-                </td>
-                <td
-                  class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium"
-                >
-                  <a
-                    class="text-red-500 hover:text-red-700 cursor-pointer"
-                    onclick="remove('{{this._id}}')"
-                  >Delete</a>
-                </td>
+                {{#if ../user.isAdmin}}
+                  <td
+                    class="w-0 px-6 py-4 whitespace-nowrap text-center text-sm font-medium"
+                  >
+                    <a
+                      class="text-blue-500 hover:text-blue-700"
+                      href="/players/update/{{this._id}}"
+                    >Update</a>
+                  </td>
+                  <td
+                    class="w-0 px-6 py-4 whitespace-nowrap text-right text-sm font-medium"
+                  >
+                    <a
+                      class="text-red-500 hover:text-red-700 cursor-pointer"
+                      onclick="remove('{{this._id}}')"
+                    >Delete</a>
+                  </td>
+                {{/if}}
               </tr>
             {{/each}}
           </tbody>
