--- a/src/view/players/update.handlebars
+++ b/src/view/players/update.handlebars
@@ -37,18 +37,22 @@
         </div>
         <div class="w-full">
           <label
-            for="price"
+            for="brand"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Club</label>
-          <input
-            type="text"
-            name="club"
-            id="brand"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-            placeholder="Club"
-            required=""
-            value="{{player.club}}"
-          />
+          >Nation</label>
+          <select
+            name="nation"
+            id="category"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          >
+            {{#each nations}}
+              {{#if this.selected}}
+                <option value="{{this._id}}" selected>{{this.name}}</option>
+              {{else}}
+                <option value="{{this._id}}">{{this.name}}</option>
+              {{/if}}
+            {{/each}}
+          </select>
         </div>
         <div>
           <label
