--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1143,9 +1143,6 @@ input:checked + .toggle-bg {
 .flex-shrink {
   flex-shrink: 1;
 }
-.flex-shrink-0 {
-  flex-shrink: 0;
-}
 .-translate-x-full {
   --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1581,7 +1578,8 @@ input:checked + .toggle-bg {
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
-body {
+a[href="/profile"] {
+  margin-left: auto !important;
 }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
