--- a/src/view/profile/update.handlebars
+++ b/src/view/profile/update.handlebars
@@ -42,42 +42,44 @@
             {{/each}}
           </select>
         </div>
-        <div>
-          <label
-            for="item-weight"
-            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Old Password</label>
-          <input
-            name="oldPassword"
-            type="password"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-            placeholder="••••••••"
-          />
-        </div>
-        <div>
-          <label
-            for="item-weight"
-            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >New Password</label>
-          <input
-            name="newPassword"
-            type="password"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-            placeholder="••••••••"
-          />
-        </div>
-        <div>
-          <label
-            for="item-weight"
-            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-          >Confirm New Password</label>
-          <input
-            name="confirmPassword"
-            type="password"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-            placeholder="••••••••"
-          />
-        </div>
+        {{#unless user.googleId}}
+          <div>
+            <label
+              for="item-weight"
+              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >Old Password</label>
+            <input
+              name="oldPassword"
+              type="password"
+              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+              placeholder="••••••••"
+            />
+          </div>
+          <div>
+            <label
+              for="item-weight"
+              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >New Password</label>
+            <input
+              name="newPassword"
+              type="password"
+              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+              placeholder="••••••••"
+            />
+          </div>
+          <div>
+            <label
+              for="item-weight"
+              class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+            >Confirm New Password</label>
+            <input
+              name="confirmPassword"
+              type="password"
+              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+              placeholder="••••••••"
+            />
+          </div>
+        {{/unless}}
         <div class="sm:col-span-2">
           {{#if session.PROFILE_UPDATE_ERROR}}
             <h2
